feat: 添加图标库功能和分类管理优化